// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui state lib utils should create a maps object 1`] = `[Function]`;

exports[`ui state lib utils should create a maps object 2`] = `[Function]`;

exports[`ui state lib utils should create correct types 1`] = `"UI_STATE_ADD:action-test-component_110ec58a-a0f2-4ac4-8393-c866d813b8d1"`;

exports[`ui state lib utils should create correct types 2`] = `"UI_STATE_SET:action-test-component_110ec58a-a0f2-4ac4-8393-c866d813b8d1"`;

exports[`ui state lib utils should dispatch the add action 1`] = `
Object {
  "payload": Object {
    "name": "action-test-component_110ec58a-a0f2-4ac4-8393-c866d813b8d1",
    "state": Object {
      "val1": true,
      "val2": false,
    },
  },
  "type": "UI_STATE_ADD:action-test-component_110ec58a-a0f2-4ac4-8393-c866d813b8d1",
}
`;

exports[`ui state lib utils should dispatch the delete action 1`] = `
Object {
  "payload": Object {
    "name": "action-test-component_110ec58a-a0f2-4ac4-8393-c866d813b8d1",
  },
  "type": "UI_STATE_DELETE:action-test-component_110ec58a-a0f2-4ac4-8393-c866d813b8d1",
}
`;

exports[`ui state lib utils should dispatch the set action 1`] = `
Object {
  "payload": Object {
    "name": "action-test-component_110ec58a-a0f2-4ac4-8393-c866d813b8d1",
    "state": Object {
      "val1": false,
      "val2": true,
    },
  },
  "type": "UI_STATE_SET:action-test-component_110ec58a-a0f2-4ac4-8393-c866d813b8d1",
}
`;

exports[`ui state lib utils should keep consistent types 1`] = `
Object {
  "add": "UI_STATE_ADD",
  "delete": "UI_STATE_DELETE",
  "reset": "UI_STATE_RESET",
  "set": "UI_STATE_SET",
}
`;

exports[`ui state lib utils should make a consistent name 1`] = `"test-component-name_110ec58a-a0f2-4ac4-8393-c866d813b8d1"`;

exports[`ui state lib utils should make a consistent name 2`] = `"component_110ec58a-a0f2-4ac4-8393-c866d813b8d1"`;
